--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,9 +20,11 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+        working-directory: ./front
 
       - name: Build project
         run: npm run build
+        working-directory: ./front
 
       - name: Sync to S3
         uses: jakejarvis/s3-sync-action@v0.5.1
@@ -33,7 +35,7 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
-          SOURCE_DIR: build
+          SOURCE_DIR: front/build
 
       - name: Invalidate CloudFront cache
         uses: chetan/invalidate-cloudfront-action@v2
