--- a/backend/package.json
+++ b/backend/package.json
@@ -24,7 +24,7 @@
     "@aws-sdk/client-secrets-manager": "^3.758.0",
     "@aws-sdk/s3-request-presigner": "^3.782.0",
     "@nestjs/common": "^10.4.15",
-    "@nestjs/config": "^4.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "^2.1.0",
@@ -37,6 +37,7 @@
     "dotenv": "^16.4.7",
     "firebase-admin": "^13.2.0",
     "fs": "^0.0.1-security",
+    "ioredis": "^5.6.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.14.1",
