--- a/backend/package.json
+++ b/backend/package.json
@@ -30,7 +30,9 @@
     "@nestjs/mapped-types": "^2.1.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.4.17",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^10.4.17",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
