--- a/backend/package.json
+++ b/backend/package.json
@@ -60,6 +60,7 @@
     "@types/jest": "^29.5.2",
     "@types/mercadopago": "^1.5.11",
     "@types/node": "^20.17.46",
+    "@types/node-fetch": "^2.6.12",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
