--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.782.0",
     "@aws-sdk/client-secrets-manager": "^3.758.0",
+    "@aws-sdk/client-ses": "^3.816.0",
     "@aws-sdk/s3-request-presigner": "^3.782.0",
     "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^4.0.2",
@@ -43,6 +44,7 @@
     "fs": "^0.0.1-security",
     "ioredis": "^5.6.1",
     "mercadopago": "^1.5.17",
+    "mjml": "^4.15.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.14.1",
