--- a/backend/package.json
+++ b/backend/package.json
@@ -50,6 +50,7 @@
     "pg": "^8.14.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "sharp": "^0.32.0",
     "transliteration": "^2.3.5",
     "typeorm": "^0.3.21",
     "uuid": "^11.1.0"
